updating profile bio and removing php mailer form

--- a/index.html
+++ b/index.html
@@ -690,16 +690,12 @@
                             <h2>I am Brandon Park,
                                 <br> Front-End Web Developer
                                 </h2>
-                            <p>Hello, I'm Brandon Park and I am very passionate about coding, software, and how AI can be implemented to make huge impacts within the development industry.
-                                I've always had a love for programming ever since I touched a computer. Upon entering Chapman University I was still intrigued by coding but it seemed out of
-                                reach and thus I pursued a degree in my second love, Marketing.</p>
-                            <p>I recently graduated from Chapman University majoring in Marketing. My prior internships regarding marketing have allowed me to use digital marketing campaigns
-                                to boost site traffic. I focused on SEO keyword implementation and content creation through blog posts and social media. I had the pleasure of utilizing
-                                HTML and CSS while updating landing pages and various content pages as well.</p>
-                            <p>Currently, I am living out my dream by learning web development over at Learning Fuze. My future goal is to incorporate my love for technology
-                                while creating meaningful projects utilizing AI. In addition, my strong interest in Digital Marketing and skills in Web Development
-                                will make me a great asset to your development team. I would love for the opportunity to develop my skills even more or even
-                                to meet new mentors/seniors that will mold me and guide me to the right path in becoming a great developer.</p>
+                            <p>Hello, I'm Brandon Park! I'm a huge techie thats very passionate about programming, software, and how AI can be implemented to make huge impacts within the development industry.
+                                I've always had a love for programming ever since I touched a computer.</p>
+                            <p>I graduated from Chapman University majoring in Marketing while learning web development in my free time. My prior internships regarding marketing have allowed me to
+                                work on HTML and CSS while updating landing pages and various content pages as well to increase SEO.</p>
+                            <p>Currently, I am living out my dream working as a web developer working with Laravel and Vue. My future goal is to incorporate my love for technology
+                                while creating meaningful projects utilizing AI. Currently, I'm working on creating a program using a raspberry pi, so stay tuned.</p>
                             <div class="info-me mb-30">
                                 <h6>
                                     <span>Mail</span>: <a href="mailto:brandonpark206@gmail.com">brandonpark206@gmail.com</a></h6>
@@ -719,7 +715,7 @@
         <div id="contact" class="contact-form-area pt-115 pb-70">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-7 col-lg-7">
+                    <!-- <div class="col-xl-7 col-lg-7">
                         <div class="area-title mb-40">
                             <h2 class="mb-15">Get In Touch</h2>
                         </div>
@@ -744,7 +740,7 @@
                             <p class="ajax-response"></p>
                             <p id = "formValidationAlerts"></p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xl-5 col-lg-5">
                         <div class="area-title mb-40">
                             <h2 class="mb-15">Contact Info</h2>
