updating pocketcards link and removing unused link to grace hopper

--- a/index.html
+++ b/index.html
@@ -174,10 +174,6 @@
                                                 <li class="text-uppercase">
                                                     <span>Industry</span>Technology</li>
                                                 <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a target="_blank" href="/grace-hopper">www.brandontravispark.com/grace-hopper/</a>
-                                                </li>
-                                                <li class="text-uppercase">
                                                     <span>Github</span>
                                                     <a target="_blank" href="https://github.com/brandon206/women-in-tech-meetup-finder">https://github.com/brandon206/women-in-tech-meetup-finder</a>
                                                 </li>
@@ -231,11 +227,11 @@
                                                     <span>Industry</span>Education</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a target="_blank" href="http://www.mypocketcards.com">www.mypocketcards.com</a>
+                                                    <a target="_blank" href="https://pocketcards.site">www.pocketcards.site</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
-                                                    <a target="_blank" href="https://github.com/Tkim43/pocket-cards">https://github.com/Tkim43/pocket-cards</a>
+                                                    <a target="_blank" href="https://github.com/brandon206/pocket-cards">https://github.com/brandon206/pocket-cards</a>
                                                 </li>
                                             </ul>
                                         </div>
